--- a/src/index.css
+++ b/src/index.css
@@ -200,7 +200,7 @@ p {
 
   .paragraph {
     text-align: start;
-    color: rgb(213, 219, 238);
+    color: rgb(211, 225, 240);
   }
   .icons {
     border: transparent;
@@ -283,16 +283,17 @@ p {
 
   .contact-form textarea {
     min-height: 100px;
-    font-size: 14px;
+    font-size: 17px;
   }
   .input-field {
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: var(--secondaryColor);
+    background-color: var(--mainColor);
+    color: rgb(211, 225, 240);
     border-radius: 5px;
     border: 1px solid var(--borderColor);
-    font-size: 14px;
+    font-size: 17px;
   }
   .submit-btn {
     font-size: 17px;
@@ -495,10 +496,11 @@ p {
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: var(--secondaryColor);
+    background-color: var(--mainColor);
     border-radius: 5px;
+    color: rgb(211, 225, 240);
     border: 1px solid var(--borderColor);
-    font-size: 14px;
+    font-size: 17px;
   }
   .submit-btn {
     cursor: pointer;
