--- a/src/index.css
+++ b/src/index.css
@@ -243,10 +243,11 @@ p {
     padding-top: 20px;
   }
   .projectImage {
+    display: block;
     object-fit: cover;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     width: 300px;
-    height: 300px;
+    height: 200px;
     border-radius: 10px;
   }
   .post-title {
